--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,6 @@ comment
 */
 
 .fancy-header {
-    color: blue; /* single line comment */
+    color: purple; /* single line comment */
     text-decoration: underline;
 }
