Style: added color blue and underline to all h1's of id=container

--- a/css/selectors.css
+++ b/css/selectors.css
@@ -8,7 +8,7 @@
 /*  selector for all "h1" elements
     that are a descendent of id="container"
     and have a class of "fancy-header" */
-selector-todo {
+#container h1 {
     color: blue;
     text-decoration: underline;
 }
