--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,33 @@
 /*
-multi
-line
-comment
-*/
+3 types of selectors
+1. element (tag name like section, main, or footer)
+2. class (start with a . and are tied to class="" in html) more important than elements
+3. id (most important ones) they start with a # and start with a # in css
 
-.fancy-header {
-    color: purple; /* single line comment */
+multiple selectors are written h1, .fancy-header{} (seperate them with a comma)
+
+
+Open up your welcome.html file from earlier.
+Center the main heading
+Add a style to change the color of the headers on your page and make them underlined.
+Add a style to change the background color of the page.
+Add a style to add a background image to your background. Search how to manipulate the position, sizing of this background image.
+Add a style to change the list-style to something other than the default bullet.
+Add a style to change the font for the entire page. Use google fonts if you would like.
+Add a style to change the table, table cells td and rows tr padding and font sizes.
+Add a style to alter the anchor tags and its different states. (e.g. link, visited, hover and active).
+Continue experimenting with styles to increase the visual appeal of the page.*/
+
+h1 {
+    text-align: center;
+}
+
+h1, h2{
+    color: purple;
     text-decoration: underline;
 }
+
+body {
+    background-color: beige;
+}
+
