--- a/css/positioning.css
+++ b/css/positioning.css
@@ -5,11 +5,20 @@
     padding:10px;
     font-weight: bold;
     color: #FFF;
-    margin: 0 50px 50px 0;
+    margin-right: 50px;
+    margin-bottom: 50px;
     float: left;
     position: relative;
     font-size: 15.5px;
 }
+
+#ribbon {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+}
+
 #box-red {
     background-color: red;
 }
@@ -24,7 +33,6 @@
 #box-green {
     background-color: green;
     clear: both;
-
 }
 #box-blue {
     background-color: blue;
@@ -48,7 +56,7 @@ div {
     margin-bottom: 50px;
 }
 
-.arrow {
+.box>img {
     position: absolute;
     top: -40px;
     right: -40px;
