--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,3 +1,5 @@
+/*adding grid layout from layout exercise*/
+
 /*Mobile layout*/
 .nav-links {
    list-style-type: none;
@@ -20,10 +22,10 @@ h1{
 section {
     text-align: left;
 }
-.header-img >img {
+img {
     width: 100%;
-    max-width: 1200px;
-    height: auto;
+    /*max-width: 1200px;*/
+    /*height: auto;*/
 }
 
 .alert-info {
@@ -49,6 +51,34 @@ li {
 
 /*Desktop layout*/
 @media screen and (min-width:768px){
+
+    .container {
+        margin: 0 auto;
+        width: 100%;
+        max-width: 1200px;
+    }
+    .row {
+        width: 100%;
+
+    }
+    .row:after {
+        /*content with empty string will give artificial content to set a height*/
+        content: '';
+        /*display table makes your element act like a table*/
+        display: table;
+        clear: both;
+    }
+    .column {
+        /*border: 1px solid black;*/
+        float: left;
+        padding: 10px;
+        /*background-color: #dddddd;*/
+        box-sizing: border-box;
+    }
+    .column.one-half {
+        width: 50%;
+    }
+
     .hidden-on-desktop {
         display: none;
     }
@@ -68,11 +98,12 @@ li {
         padding-right: 20px;
     }
     
-    .header-img>img {
-        clear: both;
+    img {
+        width: 100%;
+        /*clear: both;
         width: 100%;
         max-width: 1200px;
-        height: auto;
+        height: auto;*/
     }
     h1 {
         float: left;
@@ -84,12 +115,12 @@ li {
     }
 
     .sub-section {
-        width: 250px;
+        /*width: 250px;*/
         margin: 0;
     }
 
     .main {
-        width: 458px;
+        /*width: 458px;*/
         padding-right: 30px;
 
 
@@ -101,7 +132,7 @@ li {
     footer {
         clear: both;
         height: 100px;
-        width: 100%;
+        /*width: 100%;*/
     }
     
     footer>p {
@@ -112,9 +143,9 @@ li {
 
   #social-media-links {
       position: static;
-      float: right;
+      text-align: right;
       display: block;
-margin-top: 50px;
+
 
 
         
