--- a/css/grid-layout.css
+++ b/css/grid-layout.css
@@ -25,15 +25,28 @@
     padding: 10px;
     background-color: #dddddd;
     box-sizing: border-box ;
-}.column.one-third {
+}
+.one-third {
      width: 33.33%;
  }
- .column.one-fourth {
+ .one-fourth {
      width: 25%;
  }
- .column.one-eighth {
+ .one-eighth {
      width: 12.5%;
  }
- .column.one-half {
+ .one-half {
      width: 50%;
  }
+.three-eighth{
+    width: 37.5%;
+}
+.two-thirds{
+    width: 66.66%;
+}
+.two-fourth {
+    width: 50%;
+}
+.three-sixth {
+    width: 50%;
+}
