--- a/css/grid-layout.css
+++ b/css/grid-layout.css
@@ -2,7 +2,7 @@
 .container{
     margin: 0 auto;
     width: 80%;
-    max-width: 1200px;
+    max-width: 1500px;
 
 }
 .row {
@@ -20,10 +20,10 @@
     clear: both;
 }
 .column {
-    border: 1px solid black;
+   /* border: 1px solid black;*/
     float: left;
     padding: 10px;
-    background-color: #dddddd;
+    /*background-color: #dddddd;*/
     box-sizing: border-box ;
 }
 .one-third {
@@ -64,4 +64,38 @@
 .offset-one-fourth{
     margin-left: 25%;
 
+}
+
+@media screen and (min-width:768px) {
+
+    .container {
+        margin: 0 auto;
+        width: 100%;
+        max-width: 1500px;
+    }
+
+    .row {
+        width: 100%;
+
+    }
+
+    .row:after {
+        /*content with empty string will give artificial content to set a height*/
+        content: '';
+        /*display table makes your element act like a table*/
+        display: table;
+        clear: both;
+    }
+
+    .column {
+        /*border: 1px solid black;*/
+        float: left;
+        padding: 10px;
+        /*background-color: #dddddd;*/
+        box-sizing: border-box;
+    }
+
+    .column.one-half {
+        width: 50%;
+    }
 }
