--- a/css/custom.css
+++ b/css/custom.css
@@ -5,8 +5,8 @@
 h1{
 
     text-align: center;
-    background-color: rgba(255,255,255,.6);
-
+    background-color: white;
+    opacity: .6;
 }
 .badge-pill {
     font-weight: lighter;
